@@ -112,21 +112,27 @@ class V8Context {
  public:
   V8Context(size_t id, v8::Isolate* isolate);
 
+  size_t id() const { return _id; }
   bool isDefault() const { return _id == 0; }
   bool isUsed() const { return _locker != nullptr; }
   double age() const;
   void lockAndEnter();
   void unlockAndExit();
+  uint64_t invocations() const { return _invocations; }
+  uint64_t invocationsSinceLastGc() const { return _invocationsSinceLastGc; }
+  bool shouldBeRemoved(double maxAge, uint64_t maxInvocations) const;
   bool hasGlobalMethodsQueued();
+  void setCleaned(double stamp);
 
   size_t const _id;
 
   v8::Persistent<v8::Context> _context;
   v8::Isolate* _isolate;
   v8::Locker* _locker;
-  size_t _numExecutions;
   double const _creationStamp;
   double _lastGcStamp;
+  uint64_t _invocations;
+  uint64_t _invocationsSinceLastGc;
   bool _hasActiveExternals;
 
   Mutex _globalMethodsLock;
